alias-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  namespace: frontend-ns
spec:
  type: ExternalName
  externalName: backend-svc.backend-ns.svc.cluster.local
  ports:
  - port: 3000
