sql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-dep
  namespace: db-ns
  labels:
    app: mysql
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: mysql:8
        ports:
        - containerPort: 3306
        resources:
          requests:
            memory: "512Mi"
            cpu: "500m"
          limits:
            memory: "1Gi"
            cpu: "1"
        volumeMounts:
        - name: volume-sql
          mountPath: /var/lib/mysql
      volumes:
      - name: volume-sql
        persistentVolumeClaim:
          claimName: pvc-mysql

---
apiVersion: v1
kind: Service
metadata:
  name: mysql-svc
  namespace: db-ns
spec:
  type: ClusterIP
  ports:
    - port: 3306
      targetPort: 3306
  selector:
    app: mysql
